# SakuraProject

./: CMakeLists.txt  README.md  main.cpp  setup.bat
Core/: CMakeLists.txt  Types.h
Math/: CMakeLists.txt  Vector2D.cpp  Vector2D.h
assets/shaders/: Basic.frag  Basic.vert
engine/: CMakeLists.txt
engine/graphics/: CMakeLists.txt  Shader.cpp  Shader.h
